# horoscopes

./: .gitignore  build.gradle
Horoscopes/: sources.py
Horoscopes/Categories/: Categories.h  NSBundle+Horo.h  NSBundle+Horo.m  NSData+Horo.h  NSData+Horo.m  NSDictionary+Horo.h  NSDictionary+Horo.mm  NSError+Horo.h  NSError+Horo.mm  NSString+Horo.h  NSString+Horo.mm  UIButton+Horo.h  UIButton+Horo.m  UIColor+Horo.h  UIColor+Horo.mm  UIDevice+Horo.h  UIDevice+Horo.m  UIImage+Horo.h  UIImage+Horo.m  UIImageView+Horo.h  UIImageView+Horo.m  UINavigationBar+Horo.h  UINavigationBar+Horo.m  UIView+Horo.h  UIView+Horo.m
Horoscopes/Components/NVActivityIndicatorView/: NVActivityIndicatorView.swift
Horoscopes/Components/Sources/: NetworkService.swift  PushNotifications.swift
Horoscopes/Horoscopes/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.mm  main.m
Horoscopes/Horoscopes.xcodeproj/: project.pbxproj
Horoscopes/Horoscopes.xcworkspace/: contents.xcworkspacedata
Horoscopes/Horoscopes/Base.lproj/: LaunchScreen.storyboard
Horoscopes/Supporting Files/: AuthKey_CFV74G3QCJ.p8  Horoscopes.pch  apnsdev.pem  apnsprod.pem  aps_development.cer  aps_production.cer  apsdev.p12  apsprod.p12
Horoscopes/Supporting Files/plists/: GoogleService-Info.plist  Horoscopes-Info.plist  Horoscopes-censored-Info.plist
Horoscopes/ViewControllers/AccountViewController/: AccountViewController.h  AccountViewController.mm  AccountViewController.storyboard
Horoscopes/ViewControllers/BaseNavigationController/: BaseNavigationController.h  BaseNavigationController.mm
Horoscopes/ViewControllers/FriendsBaseViewController/: FriendsBaseViewController.h  FriendsBaseViewController.mm
Horoscopes/ViewControllers/FriendsResultsViewController/: FriendsResultsViewController.h  FriendsResultsViewController.mm
Horoscopes/ViewControllers/FriendsViewController/: FriendsViewController+Filtering.h  FriendsViewController+Filtering.mm  FriendsViewController.h  FriendsViewController.mm  FriendsViewController.storyboard
Horoscopes/ViewControllers/MainViewController/: MainViewController.mm
Horoscopes/ViewControllers/MenuViewController/: MenuViewController.h  MenuViewController.mm
Horoscopes/ViewControllers/NotificationsViewController/: NotificationsViewController.h  NotificationsViewController.mm  NotificationsViewController.storyboard
Horoscopes/ViewControllers/PredictionViewController/: PredictionViewController-old.storyboard  PredictionViewController.h  PredictionViewController.mm  PredictionViewController.storyboard
Horoscopes/ViewControllers/PushTimeViewController/: PushTimeViewController.h  PushTimeViewController.mm  PushTimeViewController.storyboard
Horoscopes/ViewControllers/WebViewDialogController/: WebViewDialogController.h  WebViewDialogController.mm  WebViewDialogController.storyboard
Horoscopes/ViewControllers/WelcomeViewController/: WelcomeViewController.h  WelcomeViewController.mm  WelcomeViewController.storyboard
Horoscopes/ViewControllers/components/: BackgroundView.h  BackgroundView.m
Horoscopes/classes/Controllers/: Controllers.h  Controllers.mm
Horoscopes/classes/DesignLabel/: DesignLabel.h  DesignLabel.m
Horoscopes/classes/FriendCell/: FriendCell.h  FriendCell.m
Horoscopes/classes/FriendsCell/: FriendsCell.h  FriendsCell.m  FriendsCell.xib
Horoscopes/classes/FriendsHeaderView/: FriendsHeaderView.h  FriendsHeaderView.m
Horoscopes/classes/GradientView/: GradientView.h  GradientView.m
Horoscopes/classes/HoroscopeSharingObject/: HoroscopeSharingObject.h  HoroscopeSharingObject.m
Horoscopes/classes/HoroscopesCell/: HoroscopesCell.h  HoroscopesCell.mm
Horoscopes/classes/MaskingView/: MaskingView.h  MaskingView.m
Horoscopes/classes/MenuCell/: MenuCell.h  MenuCell.m
Horoscopes/classes/MenuCellContentView/: MenuCellContentView.h  MenuCellContentView.m  MenuCellContentView.xib
Horoscopes/classes/MenuSimpleCell/: MenuSimpleCell.h  MenuSimpleCell.m  MenuSimpleCell.xib
Horoscopes/classes/MenuZodiacCell/: MenuZodiacCell.h  (+2 more)
Horoscopes/server/: testpusher.js
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/horoscopes/jasf/horoscopes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/horoscopes/jasf/horoscopes/: CollectionReferenceJava.java  DocumentReferenceJava.java  DocumentSnapshotJava.java  Firestore.java  HoroscopesApplication.java  MainActivity.java  MainActivityFragment.java  Notifications.java  PredictionScreen.java  ScreensManager.java
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml  prediction_screen.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/horoscopes/jasf/horoscopes/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pusher-ios/documentation/: plan.ai  пушер-док.rtf
server/: .bootstrap.js.swp  .datastore.swp  .gitignore  .scheduler_bootstrap.sh.swp  .updater.sh.swp  .updater_bootstrap.sh.swp  README-IMPORTANT-JS.json  app.js  datastoreupdate.sh  horo-ios-287dcbc8f4c6.json  package-lock.json  scheduler-fordelete.js  scheduler_bootstrap.sh  sendpushtoroom.js  service  ttyupdate.sh  ubuntu_autostart_readme  updater.sh  updater_bootstrap.sh
server/common/: common.js  horostorage.js  logger.js  networkingservice.js  scheduler.js
server/functions/: genpack.js  index.js  package-lock.json  package.json
server/needs-refactoring/: datastoreupdate.js  package-lock.json  package.json  scheduler.js  ttyupdate.js  updater_original.sh
server/pusher/: bootstrap.js  jobsmanager.js  package-lock.json  package.json  pushsender.js  pushtest.js
server/rupdater/: horoscopesdownloader.js  horoscopesparser.js  horoscopesupdater.js  jobsmanager.js  package-lock.json
server/ttyupdater/: bootstrap.js  jobsmanager.js  package-lock.json  package.json  ttycreator.js
server/updater/: bootstrap.js  horoscopesdownloader.js  horoscopesparser.js  horoscopesupdater.js  jobsmanager.js  package-lock.json  package.json
(+343 files in other folders)
